--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -8,18 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.drake.dmsocialclub.MainActivity$PlaceholderFragment" >
 
-    <TextView
-        android:id="@+id/section_label"
+    <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-<!--     <Button -->
-<!--         android:id="@+id/button1" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_alignParentLeft="true" -->
-<!--         android:layout_alignParentTop="true" -->
-<!--         android:text="Button" -->
-<!--         android:onClick="launchCalendar" /> -->
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/section_label"
+        android:layout_marginTop="19dp"
+        android:text="@string/calendar_button" 
+        android:onClick="launchCalendar"/>
 
 </RelativeLayout>
